--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: 🚀 Deploy WordPress vía FTP/SFTP
 
 on:
   push:
-    branches: [ main ]  # Cambia si tu rama de producción tiene otro nombre
+    branches: [ main ]
 
 jobs:
   ftp-deploy:
@@ -13,15 +13,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy via FTP/SFTP
-        uses: SamKirkland/FTP-Deploy-Action@4.6.0
+        uses: SamKirkland/FTP-Deploy-Action@v4.4.0
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          protocol: ${{ secrets.FTP_PROTOCOL }}   # 'sftp' o 'ftp'
+          protocol: ${{ secrets.FTP_PROTOCOL }}
           port: ${{ secrets.FTP_PORT }}
-          local-dir: ./                           # raíz del repo: wp-admin, wp-content, wp-includes…
-          server-dir: /                          # apunta a /home/malagons/public_html
+          local-dir: ./
+          server-dir: /
           dry-run: false
 
       - name: Confirmar despliegue
