--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: 🚀 Deploy WordPress vía FTP/SFTP
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   ftp-deploy:
@@ -13,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy via FTP/SFTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.4.0
+        uses: SamKirkland/FTP-Deploy-Action@v4
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
